[package]
name = "equation_defs"
version = "0.1.0"
edition = "2024"

[dependencies]
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
memory_addr = "0.3"
bitmaps = { version = "3.2.1", default-features = false }
allocator = { git = "https://github.com/arceos-org/allocator.git", tag = "v0.1.1", features = [
    "bitmap",
] }
bitmap-allocator = { version = "0.2" }
bit_field = { version = "0.10" }

[patch.crates-io]
bitmaps = { path = "../../crates/bitmaps" }
memory_addr = { path = "../../crates/memory_addr/memory_addr" }
